UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Competitor_Info__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid No</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Status__c</fullName>
        <description>Fetching Bid status Info from Bid Line Item</description>
        <formula>TEXT(Bid_Line_Item__r.Phoenix_Bid_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>Fetching Contract Status Info from Bid Line Item</description>
        <formula>TEXT(Bid_Line_Item__r.Phoenix_Contract_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Bid_No__r.Phoenix_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approval__c</fullName>
        <description>Fetching Finance Approval Info</description>
        <formula>TEXT(Bid_Line_Item__r.Phoenix_Finance_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Id__c</fullName>
        <label>Incumbent Competitor Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor Name 2</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Incumbent Competitor Name 2)</relationshipLabel>
        <relationshipName>Competitors_Info2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor Name 3</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Incumbent Competitor Name 3)</relationshipLabel>
        <relationshipName>Competitors_Info3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Name_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor Name 4</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Incumbent Competitor Name 4)</relationshipLabel>
        <relationshipName>Competitors_Info4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent Competitor Name</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_Price_Range_2__c</fullName>
        <label>Incumbent Price Range 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Price_Range_3__c</fullName>
        <label>Incumbent Price Range 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Price_Range_4__c</fullName>
        <label>Incumbent Price Range 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Price_Range__c</fullName>
        <label>Incumbent Price Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Approval__c</fullName>
        <description>Fetching Marketing Approval Info from Bid Line Item</description>
        <formula>TEXT(Bid_Line_Item__r.Phoenix_Marketing_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCM_Approval__c</fullName>
        <description>Fetching SCM Approval Info from Bid Line Item</description>
        <formula>TEXT(Bid_Line_Item__r.Phoenix_SCM_Approval_Y_N__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Opportunity</label>
        <referenceTo>Product_Opportunity__c</referenceTo>
        <relationshipLabel>Competitors Info</relationshipLabel>
        <relationshipName>Competitors_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winner_Competitor_Id__c</fullName>
        <label>Winner Competitor Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Competitor Name 2</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Winning Competitor Name 2)</relationshipLabel>
        <relationshipName>Competitors_Info6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Competitor Name 3</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Winning Competitor Name 3)</relationshipLabel>
        <relationshipName>Competitors_Info7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor_Name_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Competitor Name 4</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Winning Competitor Name 4)</relationshipLabel>
        <relationshipName>Competitors_Info8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Competitor Name</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors Info (Winning Competitor Name)</relationshipLabel>
        <relationshipName>Competitors_Info1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Price_Range_2__c</fullName>
        <label>Winning Price Range 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Price_Range_3__c</fullName>
        <label>Winning Price Range 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Price_Range_4__c</fullName>
        <label>Winning Price Range 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Price_Range__c</fullName>
        <label>Winning Price Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bid_No__c</columns>
        <columns>NDC__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Incumbent_Competitor_Name__c</columns>
        <columns>Incumbent_Price_Range__c</columns>
        <columns>Incumbent_Competitor_Name_2__c</columns>
        <columns>Incumbent_Price_Range_2__c</columns>
        <columns>Incumbent_Competitor_Name_3__c</columns>
        <columns>Incumbent_Price_Range_3__c</columns>
        <columns>Incumbent_Competitor_Name_4__c</columns>
        <columns>Incumbent_Price_Range_4__c</columns>
        <columns>Incumbent_Competitor_Name_5__c</columns>
        <columns>Incumbent_Price_Range_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Competitor Info No-{000}</displayFormat>
        <label>Competitor Info No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>